<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.awesome.opticsdisplay.Activities.MainActivity">
    <item
        android:id="@+id/createdBy_info_menu"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_menu_main"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search"
        app:showAsAction="always"
        />

    <!--app:actionViewClass="android.widget.SearchView"-->

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/action_sign_out"
        app:showAsAction="never"
        />


</menu>

