<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical"
    android:fillViewport="false"

    android:id="@+id/NestedScrollViewID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.LoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/title_register_page"
            android:textAlignment="center"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/xmetallogo"
            android:layout_width="match_parent"
            android:layout_height="180dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="15dp"
            android:id="@+id/textinput_layoutname_reg"
            android:background="@color/colorAccent"
            app:errorTextAppearance="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_editTextName_reg"
                android:inputType="text"
                android:layout_gravity="center"
                android:maxLines="1"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textStyle="bold"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layoutpassword_reg"
            android:background="@color/colorAccent"
            app:errorTextAppearance="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_editTextPassword_reg"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:maxLines="1"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layoutpasswordConf_reg"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            app:errorTextAppearance="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_editTextPasswordConf_reg"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:maxLines="1"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conf_password_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatBtnRegister_reg"
            android:layout_marginTop="10dp"
            android:text="@string/register_btn"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView_login_link"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:gravity="center"
            android:text="Login Here"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>


