<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_search_popup"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="18dp"
                android:textStyle="italic"
                android:text="@string/search_eyewear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/item_model_search_popup"
                android:layout_below="@+id/title_search_popup"
                android:hint="Enter Model#"
                android:layout_marginTop="8dp"
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/linearLayout2"
                android:layout_below="@+id/item_model_search_popup"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/search_button_search_popup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".5"
                    android:background="@color/colorAccent"
                    android:text="@string/search"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/clear_search_button"
                    android:text="@string/clear"
                    android:layout_weight=".5"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/cancel_button_search_popup"
                    android:text="Cancel"
                    android:layout_marginRight="10dp"
                    android:layout_weight=".5"
                    android:layout_below="@+id/save_button_popup"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <TextView
                android:id="@+id/search_result_TV_popup"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_below="@+id/linearLayout2"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>