<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    android:fillViewport="false"

    android:id="@+id/NestedScrollViewID_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/title_login_page"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/xmetallogo"
            android:layout_width="match_parent"
            android:layout_height="180dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layoutname_login"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:textCursorDrawable="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_editTextName_login"
                android:inputType="text"
                android:layout_gravity="center"
                android:maxLines="1"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layoutpassword_login"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:textCursorDrawable="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_editTextPassword_login"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatBtnLogin"
            android:layout_marginTop="10dp"
            android:text="@string/login_btn"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView_cancel_link"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:gravity="center"
            android:text="Cancel"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.v4.widget.NestedScrollView-->
    <!--android:id="@+id/NestedScrollViewID_login"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:padding="20dp"-->
    <!--android:background="@android:color/darker_gray"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context=".Activities.LoginActivity">-->

    <!--<android.support.v7.widget.LinearLayoutCompat-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<android.support.v7.widget.AppCompatImageView-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:src="@drawable/xmetallogo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="195dp" />-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/textinput_layoutname_login"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/textInput_editTextName_login"-->
                <!--android:inputType="text"-->
                <!--android:maxLines="1"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/username_hint" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/textinput_layoutpassword_login"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/textInput_editTextPassword_login"-->
                <!--android:inputType="textPassword"-->
                <!--android:maxLines="1"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/password_hint" />-->

        <!--</android.support.design.widget.TextInputLayout>-->


        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/appCompatBtnLogin"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/login_btn"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<android.support.v7.widget.AppCompatTextView-->
            <!--android:id="@+id/appCompatTextView_cancel_link"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:textSize="16dp"-->
            <!--android:gravity="center"-->
            <!--android:text="Cancel"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</android.support.v7.widget.LinearLayoutCompat>-->

<!--</android.support.v4.widget.NestedScrollView>-->
